# serde_molecule

./: Cargo.toml  Makefile  README.md
.github/workflows/: cargo-publish.yml  ci.yml
examples/serde_molecule_customized_union_id/: Cargo.toml
examples/serde_molecule_customized_union_id/src/: main.rs
examples/serde_molecule_nostd/: Cargo.toml  Makefile
examples/serde_molecule_nostd/src/: entry.rs  error.rs  main.rs
serde_molecule/: Cargo.toml
serde_molecule/fuzz/: Cargo.toml
serde_molecule/fuzz/fuzz_targets/: fuzz_target_de.rs
serde_molecule/src/: attribute.rs  big_array_serde.rs  de.rs  dynvec_serde.rs  error.rs  lib.rs  molecule.rs  ser.rs  struct_serde.rs  tests.rs
serde_molecule_derive/: Cargo.toml
tests/: Cargo.toml
tests/schemas/: test1.mol
tests/src/: ckb_types.rs  lib.rs  simple.rs  test_big_array.rs  test_ckb_types.rs  test_fuzzing.rs  test_serde.rs
tests/src/new/: mod.rs  test1.rs  test1_default.rs
tests/src/old/: test1.rs  test1_default.rs
tests/test-data/: oom-dump
