[package]
name = "serde_molecule"
version = "1.0.0"
authors = ["xjd <lynndon@gmail.com>"]
categories = ["encoding", "parser-implementations", "no-std"]
description = "A molecule serialization file format on CKB"
edition = "2021"
keywords = ["molecule", "serde", "serialization", "CKB"]
readme = "../README.md"
license = "MIT"
repository = "https://github.com/XuJiandong/serde_molecule"

[dependencies]
serde = { version = "1.0.208", default-features = false }

[dev-dependencies]

[features]
default = ["std"]
std = ["serde/std"]
alloc = ["serde/alloc"]