[package]
name = "serde_molecule"
version = "1.0.1"
authors = ["xjd <lynndon@gmail.com>"]
categories = ["encoding", "parser-implementations", "no-std"]
description = "Implementation of Molecule using Serde."
edition = "2021"
keywords = ["molecule", "serde", "serialization", "deserialization", "rust", "CKB"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/XuJiandong/serde_molecule"

[dependencies]
serde = { version = "1.0.208", default-features = false }

[dev-dependencies]

[features]
default = ["std"]
std = ["serde/std"]
alloc = ["serde/alloc"]