[package]
name = "serde_molecule_customized_union_id"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_molecule = { path = "../../serde_molecule" }
serde = { version = "1.0.208", features = ["derive"] }
